[package]
name = "toptl-teloxide"
version = "1.0.0"
edition = "2021"
description = "Teloxide plugin for TOP.TL — auto-post bot stats & check votes"
license = "MIT"
repository = "https://github.com/top-tl/teloxide"
homepage = "https://top.tl"
keywords = ["telegram", "teloxide", "bot", "toptl", "stats"]
categories = ["api-bindings"]

[dependencies]
toptl = ">=1.0.0"
tokio = { version = "1", features = ["rt", "time", "sync"] }
log = "0.4"

[dependencies.teloxide]
version = "0.13"
optional = true

[features]
default = ["teloxide"]
